--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h1> HEllo and welcome to Pizzashop</h1>
 
-<button class="btn btn-success">Click me</button>
+<button class="btn btn-success" onclick="something()">Click me</button>
 
 <script>
   function something()
