add about and contacts erb

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sinatra + Twitter Bootstrap</title>
+		<title>Pizza Shop</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,13 +29,14 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a class="navbar-brand" href="/">My Website</a>
+			    <a class="navbar-brand" href="/">О нас</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/blabla">Blabla</a></li>
-			      <li><a href="/something">Something</a></li>
-			      <li><a href="/contacts">Contacts</a></li>
+			      <li><a href="/menu">Меню</a></li>
+						<li><a href="/about">О нас</a></li>
+			      <li><a href="/something">Ваш заказ и оплата</a></li>
+			      <li><a href="/contacts">Контакты</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
