--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
 		<script src="/vendor/jquery-1.9.1.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-		<script src="/app.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,29 +17,19 @@
 		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
+		<script src="/app.js"></script>
 	</head>
 	<body>
-		<div class="container">
 
-			<!-- Static navbar -->
-			<nav class="navbar navbar-default" role="navigation">
-			  <div class="navbar-header">
-			    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-			      <span class="sr-only">Toggle navigation</span>
-			      <span class="icon-bar"></span>
-			      <span class="icon-bar"></span>
-			      <span class="icon-bar"></span>
-			    </button>
-			    <a class="navbar-brand" href="/">О нас</a>
-			  </div>
-			  <div class="navbar-collapse collapse">
-			    <ul class="nav navbar-nav">
-			      <li><a href="/menu">Меню</a></li>
-						<li><a href="/about">О нас</a></li>
-			      <li><a href="/something">Ваш заказ и оплата</a></li>
-			      <li><a href="/contacts">Контакты</a></li>
-			    </ul>
-			  </div><!--/.nav-collapse -->
+				<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+					<a class="btn btn-outline-primary" href="/">Наша пицца</a>
+					<nav class="my-2 my-md-0 mr-md-3">
+						<a class="p-2 text-dark" href="/menu">Меню</a>
+						<a class="p-2 text-dark" href="/about">О нас</a>
+						<a class="p-2 text-dark" href="/something">Ваш заказ и оплата</a>
+						<a class="p-2 text-dark" href="/contacts">Контакты</a>
+					</nav>
+				</div>
 			</nav>
 
 			<div>
