--- a/views/menu.erb
+++ b/views/menu.erb
@@ -20,20 +20,23 @@
 </head>
 <body>
 
-<h1> About us</h1>
+<h1>Меню нашего заведения</h1>
+<br>
 <div class="container">
   <div class="row">
     <div class="col-sm">
-      One of three col2umns
+      пицца
     </div>
     <div class="col-sm">
-      One of three columns
+      суши
     </div>
     <div class="col-sm">
-      One of three columns
+      напитки
     </div>
   </div>
 </div>
+<br>
+<br>
 <button class="btn btn-success" onclick="something()">Click me</button>
 
 </body>
