--- a/views/about.erb
+++ b/views/about.erb
@@ -34,6 +34,37 @@
     </div>
   </div>
 </div>
+<div class="row">
+
+  <% @products.each do |p| %>
+    <div class="col-md-3">
+      <div>
+        <%= p.title %>
+      </div>
+
+      <div>
+        <img src="<%= p.path_to_image %>" />
+      </div>
+
+      <div>
+        <%= p.description %>
+      </div>
+
+      <div>
+        Size: <%= p.size %> cm
+      </div>
+
+      <div>
+        Price: <%= p.price %> rub
+      </div>
+
+      <div>
+        <button class="btn btn-sm btn-success" onclick="add_to_cart(<%= p.id %>)">Add to cart</button>
+      </div>
+    </div>
+  <% end %>
+
+</div>
 <button class="btn btn-success" onclick="something()">Click me</button>
 
 </body>
